--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 	body,input,textarea,select
 	{
 		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 19pt;
+		font-size: 22pt;   /*19pt*/
 		font-weight: 350;  /*300*/
 		line-height: 1.75em;
 		color: #333;
