z gallery and sidewalk gallery

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset 'UTF-8';
 
-@font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
+
 
 /*
 	Prologue 1.1 by HTML5 UP
@@ -17,6 +17,13 @@
 		background: #fff;
 	}
 
+	.gallery-body{
+		background-color: #333
+	}
+	
+	.fotorama__arr{
+		transform: scale(2);
+	}
 	body,input,textarea,select
 	{
 		font-family: 'Source Sans Pro', sans-serif;
